# aiogram-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker-image-release.yml
src/: main.py
src/router/: __init__.py
src/services/: database.py  logging.py
src/services/formatters/: logs.py
src/services/middlewares/: logging.py
src/types/: settings.py
