[tool.poetry]
package-mode = false
name = "aiogram-template"
version = "1.0.0"
description = "Template for Aiogram bots"
authors = ["sushka <r.m.poltorabatko@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.1"
aiogram = "^3.15.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry.scripts]
main = "src.main:main"
